deployment/openshift/test/bookkeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"pulsar","component":"bookkeeper"},"name":"bookkeeper","namespace":"apache-pulsar"},"spec":{"clusterIP":"None","ports":[{"name":"server2","port":2888},{"name":"leader-election","port":3888},{"name":"server","port":3181}],"selector":{"app":"pulsar","component":"bookkeeper"}}}
  creationTimestamp: null
  labels:
    app: pulsar
    component: bookkeeper
  name: bookkeeper
  selfLink: /api/v1/namespaces/apache-pulsar/services/bookkeeper
spec:
  clusterIP: None
  ports:
  - name: server2
    port: 2888
    protocol: TCP
    targetPort: 2888
  - name: leader-election
    port: 3888
    protocol: TCP
    targetPort: 3888
  - name: server
    port: 3181
    protocol: TCP
    targetPort: 3181
  selector:
    app: pulsar
    component: bookkeeper
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
