deployment/openshift/test/bookkeeper-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1beta1","kind":"StatefulSet","metadata":{"annotations":{},"labels":{"app":"pulsar","component":"bookkeeper"},"name":"bookkeeper","namespace":"apache-pulsar"},"spec":{"replicas":3,"serviceName":"bookkeeper","template":{"metadata":{"annotations":{"prometheus.io/port":"8000","prometheus.io/scrape":"true"},"labels":{"app":"pulsar","cluster":"us-east","component":"bookkeeper"}},"spec":{"affinity":{"podAntiAffinity":{"preferredDuringSchedulingIgnoredDuringExecution":[{"podAf [...]
  creationTimestamp: null
  generation: 1
  labels:
    app: pulsar
    component: bookkeeper
  name: bookkeeper
  selfLink: /apis/apps/v1/namespaces/apache-pulsar/statefulsets/bookkeeper
spec:
  podManagementPolicy: OrderedReady
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pulsar
      cluster: us-east
      component: bookkeeper
  serviceName: bookkeeper
  template:
    metadata:
      annotations:
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: pulsar
        cluster: us-east
        component: bookkeeper
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - pulsar
                - key: component
                  operator: In
                  values:
                  - bookkeeper
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - args:
        - |
          bin/apply-config-from-env.py conf/bookkeeper.conf && bin/apply-config-from-env.py conf/pulsar_env.sh && bin/pulsar bookie
        command:
        - sh
        - -c
        envFrom:
        - configMapRef:
            name: bookie-config
        image: apachepulsar/pulsar:latest
        imagePullPolicy: Always
        name: bookie
        ports:
        - containerPort: 2181
          name: client
          protocol: TCP
        - containerPort: 2888
          name: server2
          protocol: TCP
        - containerPort: 3888
          name: leader-election
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /pulsar/data/bookkeeper/journal
          name: journal-disk
        - mountPath: /pulsar/data/bookkeeper/ledgers
          name: ledgers-disk
        - mountPath: /pulsar/logs
          name: log-disk
      dnsPolicy: ClusterFirst
      initContainers:
      - args:
        - |
          bin/apply-config-from-env.py conf/bookkeeper.conf && bin/bookkeeper shell metaformat --nonInteractive || true;
        command:
        - sh
        - -c
        envFrom:
        - configMapRef:
            name: bookie-config
        image: apachepulsar/pulsar:latest
        imagePullPolicy: Always
        name: bookie-metaformat
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      serviceAccount: zookeepersa
      serviceAccountName: zookeepersa
      terminationGracePeriodSeconds: 0
  updateStrategy:
    type: OnDelete
  volumeClaimTemplates:
  - metadata:
      creationTimestamp: null
      labels:
        component: bookkeeper
      name: journal-disk
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
    status:
      phase: Pending
  - metadata:
      creationTimestamp: null
      labels:
        component: bookkeeper
      name: ledgers-disk
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
    status:
      phase: Pending
  - metadata:
      creationTimestamp: null
      labels:
        component: bookkeeper
      name: log-disk
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
    status:
      phase: Pending
status:
  replicas: 0
