deployment/openshift/test/broker-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: pulsar
    component: broker
  name: broker
  selfLink: /apis/route.openshift.io/v1/namespaces/apache-pulsar/routes/broker
spec:
  host: broker-apache-pulsar.np-services.apria.com
  port:
    targetPort: http
  to:
    kind: Service
    name: broker
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
