deployment/openshift/test/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"pulsar","component":"broker"},"name":"broker","namespace":"apache-pulsar"},"spec":{"clusterIP":"None","ports":[{"name":"http","port":8080},{"name":"pulsar","port":6650}],"selector":{"app":"pulsar","component":"broker"}}}
  creationTimestamp: null
  labels:
    app: pulsar
    component: broker
  name: broker
  selfLink: /api/v1/namespaces/apache-pulsar/services/broker
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: pulsar
    port: 6650
    protocol: TCP
    targetPort: 6650
  selector:
    app: pulsar
    component: broker
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
