deployment/openshift/test/broker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"broker","namespace":"apache-pulsar"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"pulsar","component":"broker"}},"template":{"metadata":{"annotations":{"prometheus.io/port":"8080","prometheus.io/scrape":"true"},"labels":{"app":"pulsar","component":"broker"}},"spec":{"containers":[{"args":["bin/apply-config-from-env.py conf/broker.conf \u0026\u0026 bin/apply-config-from-env.py conf/pulsar_env.sh \u002 [...]
  creationTimestamp: null
  generation: 1
  name: broker
  selfLink: /apis/extensions/v1beta1/namespaces/apache-pulsar/deployments/broker
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pulsar
      component: broker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: pulsar
        component: broker
    spec:
      containers:
      - args:
        - |
          bin/apply-config-from-env.py conf/broker.conf && bin/apply-config-from-env.py conf/pulsar_env.sh && bin/gen-yml-from-env.py conf/functions_worker.yml && bin/pulsar broker
        command:
        - sh
        - -c
        env:
        - name: advertisedAddress
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        envFrom:
        - configMapRef:
            name: broker-config
        image: apachepulsar/pulsar-all:latest
        imagePullPolicy: Always
        name: broker
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 6650
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /pulsar/logs
          name: logs-disk
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      serviceAccount: zookeepersa
      serviceAccountName: zookeepersa
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: logs-disk
status: {}
