deployment/openshift/test/proxy-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: pulsar
    component: proxy
  name: proxy
  selfLink: /apis/route.openshift.io/v1/namespaces/apache-pulsar/routes/proxy
spec:
  host: proxy-apache-pulsar.np-services.apria.com
  port:
    targetPort: http
  to:
    kind: Service
    name: proxy
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
