deployment/openshift/test/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"pulsar","component":"proxy"},"name":"proxy","namespace":"apache-pulsar"},"spec":{"ports":[{"name":"http","nodePort":30001,"port":8080,"protocol":"TCP"},{"name":"tcp","nodePort":30002,"port":6650,"protocol":"TCP"}],"selector":{"app":"pulsar","component":"proxy"},"type":"NodePort"}}
  creationTimestamp: null
  labels:
    app: pulsar
    component: proxy
  name: proxy
  selfLink: /api/v1/namespaces/apache-pulsar/services/proxy
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: tcp
    port: 6650
    protocol: TCP
    targetPort: 6650
  selector:
    app: pulsar
    component: proxy
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
