deployment/openshift/test/proxy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"proxy","namespace":"apache-pulsar"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"pulsar","component":"proxy"}},"template":{"metadata":{"annotations":{"prometheus.io/port":"8080","prometheus.io/scrape":"true"},"labels":{"app":"pulsar","component":"proxy"}},"spec":{"containers":[{"args":["bin/apply-config-from-env.py conf/proxy.conf \u0026\u0026 bin/apply-config-from-env.py conf/pulsar_env.sh \u0026\u0 [...]
  creationTimestamp: null
  generation: 1
  name: proxy
  selfLink: /apis/extensions/v1beta1/namespaces/apache-pulsar/deployments/proxy
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pulsar
      component: proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: pulsar
        component: proxy
    spec:
      containers:
      - args:
        - |
          bin/apply-config-from-env.py conf/proxy.conf && bin/apply-config-from-env.py conf/pulsar_env.sh && bin/pulsar proxy
        command:
        - sh
        - -c
        envFrom:
        - configMapRef:
            name: proxy-config
        image: apachepulsar/pulsar-all:latest
        imagePullPolicy: Always
        name: proxy
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      serviceAccount: zookeepersa
      serviceAccountName: zookeepersa
      terminationGracePeriodSeconds: 30
status: {}
