deployment/openshift/test/pulsar-dashboard-secure-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: pulsar
    component: dashboard
  name: pulsar-dashboard-secure
  selfLink: /apis/route.openshift.io/v1/namespaces/apache-pulsar/routes/pulsar-dashboard-secure
spec:
  host: pulsar-dashboard-secure-apache-pulsar.np-services.apria.com
  port:
    targetPort: dashboard
  tls:
    termination: edge
  to:
    kind: Service
    name: pulsar-dashboard
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
