deployment/openshift/test/pulsar-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pulsar
    component: dashboard
  name: pulsar-dashboard
  selfLink: /api/v1/namespaces/apache-pulsar/services/pulsar-dashboard
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: dashboard
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pulsar
    component: dashboard
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
