deployment/openshift/test/pulsar-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: pulsar
    component: dashboard
  name: pulsar-dashboard
  selfLink: /apis/extensions/v1beta1/namespaces/apache-pulsar/deployments/pulsar-dashboard
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pulsar
      component: dashboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pulsar
        component: dashboard
    spec:
      containers:
      - env:
        - name: SERVICE_URL
          value: http://broker:8080/
        image: apachepulsar/pulsar-dashboard:latest
        imagePullPolicy: Always
        name: pulsar-dashboard
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data-disk
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      serviceAccount: zookeepersa
      serviceAccountName: zookeepersa
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data-disk
        persistentVolumeClaim:
          claimName: dashboard
status: {}
