deployment/openshift/test/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"service.alpha.kubernetes.io/tolerate-unready-endpoints":"true"},"labels":{"app":"pulsar","component":"zookeeper"},"name":"zookeeper","namespace":"apache-pulsar"},"spec":{"clusterIP":"None","ports":[{"name":"server","port":2888},{"name":"leader-election","port":3888}],"selector":{"app":"pulsar","component":"zookeeper"}}}
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  creationTimestamp: null
  labels:
    app: pulsar
    component: zookeeper
  name: zookeeper
  selfLink: /api/v1/namespaces/apache-pulsar/services/zookeeper
spec:
  clusterIP: None
  ports:
  - name: server
    port: 2888
    protocol: TCP
    targetPort: 2888
  - name: leader-election
    port: 3888
    protocol: TCP
    targetPort: 3888
  selector:
    app: pulsar
    component: zookeeper
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
